<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddDeliveryInfo">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/back_image"
                    android:rotation="180"
                    android:src="@mipmap/errow"  />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="Add Delivery Information"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="Current Location"
                        android:textColor="@color/red"
                        android:textSize="18sp" />


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:singleLine="true"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/add_delivery_edit_text_back"
                        android:drawableStart="@mipmap/locationdelivery"
                        android:drawableEnd="@drawable/ic_edit_black_24dp"
                        android:drawablePadding="10dp"
                        android:id="@+id/current_location"
                        android:hint="3b2 Mohali Phase 3"
                        android:paddingLeft="10dp"
                        android:textSize="15sp"
                        android:paddingTop="10dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appBar"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="Receiver Information"
                        android:textColor="@color/red"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address_optional"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/optional"
                            android:layout_marginLeft="2dp"
                            android:textColor="@color/black"
                            android:textSize="14sp" />


                    </LinearLayout>



                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/add_delivery_edit_text_back"
                        android:drawableStart="@mipmap/locationdelivery"
                        android:drawableEnd="@drawable/ic_add_black_24dp"
                        android:drawablePadding="10dp"
                        android:hint="Add Address"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:paddingTop="10dp"
                        android:textSize="15sp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Receiver's Name"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/optional"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />



                </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:textSize="15sp"
                        android:id="@+id/recieverName"
                        android:layout_marginRight="10dp"
                        android:hint="enter Here" />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Receiver's Phone Number"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="10dp"
                        android:textSize="15sp"
                        android:id="@+id/mobile_number"
                        android:layout_marginBottom="20dp"
                        android:hint="enter here" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/change_package"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/img"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/normal_1_0"
                            android:textColor="@color/red"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"/>



                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:layout_marginLeft="20dp"
                android:id="@+id/confirm"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_back"
                android:textSize="20sp"
                android:layout_marginBottom="30dp"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>